@@ -259,4 +259,18 @@ public class Album
 		if (album_empty)
 			pointers.Remove (handle);
 	}
+
+	public bool FitsCriteria (string [] search_bits)
+	{
+		int n_matches = 0;
+			
+		foreach (string search_bit in search_bits) {
+			if (SearchKey.IndexOf (search_bit) >= 0) {
+				n_matches++;
+				continue;
+			}
+		}
+
+		return (n_matches == search_bits.Length);
+	}
 }
