@@ -539,4 +539,18 @@ public class Song
 	{
 		return (Song) pointers [handle];
 	}
+
+	public bool FitsCriteria (string [] search_bits)
+	{
+		int n_matches = 0;
+			
+		foreach (string search_bit in search_bits) {
+			if (SearchKey.IndexOf (search_bit) >= 0) {
+				n_matches++;
+				continue;
+			}
+		}
+
+		return (n_matches == search_bits.Length);
+	}
 }
